assets/css/style.css
body{
    font-family: 'Arimo', sans-serif;
    box-sizing: border-box;
    margin: 0;
}

#heading{
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    padding-top: 5px;
    padding-bottom: 10px;
}

#buttons{
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    cursor:pointer;
}

.styledButton{
    font-size: 12px;
    color: #0c0c0c;
    background: none;
    position: relative;
    transition:color 0.25s ease;
    padding:10px 20px; 
    margin: 5px;
    box-shadow: 0 0 20px #eee;
    border-radius: 10px;
    cursor: pointer;
    -webkit-border-radius: 5px;
    border-radius: 5px; 
  }

  .styledButton:hover {
    color:white;
  }
  
  .styledButton::after{
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background-image: linear-gradient(to bottom right, #f6d365 25%, #fda085 75%);
    transition: width 0.25s ease;
    z-index: -1;
    outline: none;
  }

  .styledButton:hover::after{
        width: 100%;
  }

  .addStyledButton {
    background-image: linear-gradient(to right, #84fab0 0%, #8f9ef4 51%, #84fab0 100%);
    padding: 15px 35px; 
    cursor: pointer;
    box-shadow: 0 0 20px #eee;
    border-radius: 10px;
    color: white;
    border: none;
    font-size: 14px;
  }
  

#gifs{
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
}

#gifDiv{
    margin-bottom: 10px;
    display: flex;
    justify-content: center;
}

.gif{
    margin-left: 10px;
}

#add{
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-top: 35px;
}

#add-tv {
    margin-top: 20px;
}

#topRow {
    display: flex;
    justify-content: center;
}

#topRow input {
    margin-left: 20px;
}

#tv-form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#gif{
    height: 300px;
    width: 300px;
}

@media only screen and (max-width: 768px) {
    /* For mobile phones: */
    [class*="col-"] {
        width: 100%;
    }
}

@media only screen and (max-width: 768px) {
    /* For tablets: */
    #gifs{
        display: flex;
        flex-direction: column-reverse;
    }
}

